# component-store

./: .eslintrc.cjs  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
.storybook/: preview.ts
app/: main.py
app/api/: main.py
app/api/routes/: auth.py
app/core/: config.py
app/models/: auth.py
memo/: project.md
src/: App.tsx  main.tsx
src/components/: CarForm.tsx  CarList.tsx  CarSearch.tsx
src/components/Button/: Button.stories.ts  index.tsx
src/components/Header/: Header.stories.ts  index.scss  index.tsx
src/components/SamplePage/: SamplePage.stories.ts  index.tsx
src/store/: index.ts
src/store/slices/: carsSlice.ts  formSlice.ts
src/stories/: Button.stories.ts  Configure.mdx  Header.stories.ts  SamplePage.stories.ts
src/styles/: index.scss
